--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -17,19 +17,18 @@ Grandes telas: acima 1200px
 
     section#login {
         width: 80vw;
-
     }
 
     section#login > div#img {
         float: left;
         width: 30%;
         height: 100%;
-
     }
 
-    section#login > div#fomulario {
+    section#login > div#formulario {
         float: right;
         width: 70%;
+        height: 100%;
     }
 
 }
@@ -51,7 +50,7 @@ Grandes telas: acima 1200px
         height: 100%;
     }
 
-    section#login> div#formulario {
+    section#login > div#formulario {
         float: left;
         width: 50%;   
     }
