--- a/estilos/mediaquery.css
+++ b/estilos/mediaquery.css
@@ -17,6 +17,7 @@ Grandes telas: acima 1200px
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#img {
@@ -33,7 +34,7 @@ Grandes telas: acima 1200px
 
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px) {/*Desktop*/
+@media screen and (min-width: 992px) {/*Desktop*/
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -41,7 +42,7 @@ Grandes telas: acima 1200px
 
     section#login {
         width: 80%;
-
+        height: 350px;
     }
 
     section#login > div#img {
@@ -60,11 +61,9 @@ Grandes telas: acima 1200px
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 
 }
 
-@media screen and (min-width: 1201px) {/*Telas Grandes*/
-    
-}
